# fractal-matrix-client

./: .coveragerc  Dockerfile.test  Makefile  README.md  conftest.py  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
fractal/: __init__.py  async_client.py  exceptions.py  utils.py
fractal/controllers/: login.py
fractal/matrix/: __init__.py  admin_client.py  async_client.py  exceptions.py  utils.py
fractal/matrix/controllers/: auth.py  login.py  registration.py
synapse/: Makefile
synapse/config/: Dockerfile.nginx  config_to_add.yaml  nginx.conf.template
test-config/: entrypoint.sh  prepare-test.py
tests/: test_fractal_async_client_invite.py  test_matrix.py  test_utils.py
tests/fractal-async-client/: test_fractal_async_client_get_latest_sync_token.py  test_fractal_async_client_invite.py  test_fractal_async_client_send_message.py  test_matrix.py
