[tool.poetry]
name = "fractal-matrix-client"
version = "0.0.7"
description = ""
authors = ["Mo Balaa <balaa@fractalnetworks.co>"]
readme = "README.md"
packages = [
 {include = "fractal"} ]

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
matrix-nio = "^0.22.1"
sh = "^2.0.6"
aiofiles = "^23.1.0"
PyYAML = "^6.0.1"
docker = "^7.1.0"
pytest = { version = "^7.4.3", optional = true }
pytest-asyncio = { version = "^0.21.1", optional = true }
pytest-cov = { version = "^4.1.0", optional = true }
pytest-mock = { version = "^3.11.1", optional = true }
aioresponses = {version = "^0.7.6", optional = true}
ipython = { version = "^8.17.2", optional = true }

[tool.poetry.extras]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-mock", "ipython", "pytest-benchmark", "aioresponses"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
